[project]
name = "Blueprint-Bot"
version = "0.1.0"
description = "AI-powered coding assistant built with LangGraph. Simulates a multi-agent dev team (Planner, Architect, Coder) to generate complete, working projects from prompts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.31.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.3",
    "pip>=25.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]
